--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <tw-storydata name="Loom of the Moon" startnode="1" creator="Twine" creator-version="2.1.0" ifid="D5FE3057-81BB-454C-9F93-9C9B7B450F9F" format="Harlowe" format-version="1.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">body
 {
   background-color: #e6e6fa;
-  color: #f08080;
+  color: #900020;
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Untitled Passage" tags="" position="50,22">(set: $verb to &quot;fear&quot;)
 You are [my]&lt;attribute|
 (click: ?attribute)[anchor and my:]
