--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ You are [my]&lt;attribute|
 [[ocean]] 
 
 [[boat]]
+  <img src=http://i347.photobucket.com/albums/p467/Maeve_Potter/boat_zps0krqmgrk.gif>
 </tw-passagedata><tw-passagedata pid="2" name="ocean" tags="" position="50,179">
 And although I $verb from [[time]] to [[temi&lt;-time]]</tw-passagedata><tw-passagedata pid="3" name="boat" tags="" position="260,183">You keep me from:
 
