--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@ And although I $verb from [[time]] to [[temi&lt;-time]]</tw-passagedata><tw-pass
 
 [[life]]
 
-[[strength]]</tw-passagedata><tw-passagedata pid="7" name="drowning" tags="" position="338,446">You give me:
+[[strength]]
+  <img src=http://i347.photobucket.com/albums/p467/Maeve_Potter/humanheart_zpsxeggcnrt.gif>
+  </tw-passagedata><tw-passagedata pid="7" name="drowning" tags="" position="338,446">You give me:
 
 [[days]]
 
